# Products.PluggableAuthService

./: .bzrignore  .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  HISTORY.txt  MANIFEST.in  README.rst  README.txt  bootstrap.py  bootstrap.sh  buildout.cfg  buildout4.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini  version.txt
.github/workflows/: codeql-analysis.yml  tests.yml
Products/PluggableAuthService/: COPYRIGHT.txt  PluggableAuthService.py  PropertiedUser.py  README.txt  UserPropertySheet.py  __init__.py  compatibility.zcml  configure.zcml  events.py  exportimport.py  exportimport.zcml  permissions.py  utils.py  version.txt  zcml.py
Products/PluggableAuthService/Extensions/: basic_auth.py  upgrade.py
Products/PluggableAuthService/doc/: CHANGES.txt  HISTORY.txt  masquerading.txt
Products/PluggableAuthService/interfaces/: __init__.py  authservice.py  events.py  plugins.py  propertysheets.py  request.py
Products/PluggableAuthService/plugins/: BasePlugin.py  ChallengeProtocolChooser.py  CookieAuthHelper.py  DelegatingMultiPlugin.py  DomainAuthHelper.py  DynamicGroupsPlugin.py  HTTPBasicAuthHelper.py  InlineAuthHelper.py  LocalRolePlugin.py  NotCompetentHelper.py  RecursiveGroupsPlugin.py  RequestTypeSniffer.py  ScriptablePlugin.py  SearchPrincipalsPlugin.py  SessionAuthHelper.py  ZODBGroupManager.py  ZODBRoleManager.py  ZODBUserManager.py  __init__.py  exportimport.py
Products/PluggableAuthService/tests/: __init__.py  conformance.py  pastc.py  test_Caching.py  test_Extensions.py  test_MoreCaching.py  test_PluggableAuthService.py  test_PropertiedUser.py  test_UserFolder.py  test_UserPropertySheet.py  test_events.py  test_exportimport.py  test_masquerading.py  test_utils.py  utils.py
Products/PluggableAuthService/www/: pasAddForm.zpt  pasSearch.zpt  two_lists.zpt
docs/: Makefile  caching.rst  conf.py  index.rst  plugin.rst  requestflow.rst
docs/api/: events.rst  plugins.rst  request.rst  user.rst  userfolder.rst  userproperties.rst
src/Products/PluggableAuthService/: PluggableAuthService.py  PropertiedUser.py  UserPropertySheet.py  __init__.py  configure.zcml  events.py  events.zcml  exportimport.py  exportimport.zcml  utils.py  zcml.py
src/Products/PluggableAuthService/tests/: pastc.py  (+14 more)
trunk/: CHANGES.txt  README.txt  buildout.cfg
trunk/Products/PluggableAuthService/: PluggableAuthService.py  PropertiedUser.py  UserPropertySheet.py  compatibility.zcml  events.py  utils.py
(+155 files in other folders)
